# SlidingWindowDecoder

./: .envrc  pyproject.toml
src/: bp4_osd.cpp  bp4_osd.pyx  bp_guessing_decoder.cpp  mod2sparse.c  osd_window.cpp  osd_window.pyx
src/include/: bpgd.cpp
